; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_touchscreen_dmi.c_ts_dmi_notifier_call.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_touchscreen_dmi.c_ts_dmi_notifier_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notifier_block = type { i32 }
%struct.device = type { i32 }
%struct.i2c_client = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.notifier_block*, i64, i8*)* @ts_dmi_notifier_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ts_dmi_notifier_call(%struct.notifier_block* %0, i64 %1, i8* %2) #0 {
  %4 = alloca %struct.notifier_block*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.device*, align 8
  %8 = alloca %struct.i2c_client*, align 8
  store %struct.notifier_block* %0, %struct.notifier_block** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.device*
  store %struct.device* %10, %struct.device** %7, align 8
  %11 = load i64, i64* %5, align 8
  switch i64 %11, label %21 [
    i64 128, label %12
  ]

12:                                               ; preds = %3
  %13 = load %struct.device*, %struct.device** %7, align 8
  %14 = call %struct.i2c_client* @i2c_verify_client(%struct.device* %13)
  store %struct.i2c_client* %14, %struct.i2c_client** %8, align 8
  %15 = load %struct.i2c_client*, %struct.i2c_client** %8, align 8
  %16 = icmp ne %struct.i2c_client* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load %struct.i2c_client*, %struct.i2c_client** %8, align 8
  %19 = call i32 @ts_dmi_add_props(%struct.i2c_client* %18)
  br label %20

20:                                               ; preds = %17, %12
  br label %22

21:                                               ; preds = %3
  br label %22

22:                                               ; preds = %21, %20
  ret i32 0
}

declare dso_local %struct.i2c_client* @i2c_verify_client(%struct.device*) #1

declare dso_local i32 @ts_dmi_add_props(%struct.i2c_client*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
